--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -301,7 +301,7 @@ Sun leaves have anatomical, morphological, and physiological traits that reduce 
 Thus, sun leaves are generally smaller and thicker, with higher LMA, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017], but with greater leaf packing and clumping (which reduces $g_b$).
 Steeper leaf angles reduce mid-day radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, also decreasing radiation load.
 Further, sun leaves tend to have higher stomatal and vein densities, which fascilitate evaporative cooling by enabling higher $g_s$ [section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
-Yet sun leaves also have adaptations to limit water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [which may reduce or increase $g_b$; @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
+Yet sun leaves also have adaptations to limit water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [which may reduce or increase $g_b$, @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
 In contrast, shade leaves have traits that maximize light capture (e.g., lower LMA and greater light absorptance per unit biomass), but larger leaves and lower transpiration make them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
 In open canopies, where light is comparatively homogeneous, leaf traits may be shaped more by maximum $T_{air}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
@@ -375,7 +375,7 @@ Within tropical dry-season-deciduous species, the fraction of seasonally deciduo
 Similarly, fractions of deciduous species increase with tree size class [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
 Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct vertical patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019;@tangLightdrivenGrowthAmazon2017;@nunesForestFragmentationImpacts2022]. 
 For instance, in a central Amazonian forest, the upper canopies of both interior and edge forests shed leaves when maximum daily $T_{air}$ exceeded ~35$^\circ$C [@nunesForestFragmentationImpacts2022].
-Beacsue leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
+Because leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
 Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; <!--@mariasImpactsLeafAge2017;--> @zhouLeafageEffectsTemperature2015].
 Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
 
@@ -429,7 +429,7 @@ Photosynthetic capacity is generally higher in exposed canopy positions-- a fact
 
 Temperature can affect photosynthesis directly, by altering photosynthetic enzyme activity and the electron transport chain,  and indirectly, by increasing VPD and closing stomata [@lloydEffectsRisingTemperatures2008]. 
 Photosynthesis has a peaked response to $T_{air}$, with the peak commonly corresponding to the prevalent ambient growing season temperature [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017; @doughtyAreTropicalForests2008]. 
-Beyond the optimum, photosynthesis decreases due to stomatal closure [ @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020; @grossiordPlantResponsesRising2020; <!--@fredeenTemperatureHumidityEffects1999-->] and biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019; <!--@sageTemperatureResponseC32007;--> @varhammarPhotosyntheticTemperatureResponses2015; @sharkeyEffectsModerateHeat2005].
+Beyond the optimum, photosynthesis decreases due to stomatal closure [ @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020; @grossiordPlantResponsesRising2020 <!--@fredeenTemperatureHumidityEffects1999-->] and biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019; <!--@sageTemperatureResponseC32007;--> @varhammarPhotosyntheticTemperatureResponses2015; @sharkeyEffectsModerateHeat2005].
 
 We have very little evidence about how the temperature sensitivity of photosynthesis compares between sun and shade leaves, and existing studies, which  compare sun and shade leaves of the same trees, reveal no pronounced overall trend with height in photosynthetic temperature optima  (Table `r table_leaf_metabolism`).
 Based on consistent positive relationships between growth temperature and optimum temperature of photosynthesis ($T_{opt}$) across sites and seasons [e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019], one might expect sun leaves to have a stronger temperature-dependence and higher $T_{opt}$ than shade leaves [@campbell_introduction_1998; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
@@ -445,7 +445,7 @@ In the meantime, it remains unresolved whether photosynthesis is more affected b
 ### 4.3. Respiration
 
 Similar to photosynthesis, respiration tends to be higher in upper-canopy sun leaves [Table `r table_leaf_metabolism`, @chenLeafEconomicsSpectrum2020], but its temperature sensitivity ($Q_{10}$ or $E_0$, Table `r table_leaf_metabolism`) shows no definite trend along the vertical gradient [@bolstad_foliar_1999; @weerasingheCanopyPositionAffects2014].
-Specifically, the temperature sensitivity of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves [<!--@carterExperimentalWarmingTropical2021-->; @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007 <!--@zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006-->], greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], or greater in the lower canopy [@griffinCanopyPositionAffects2002]. 
+Specifically, the temperature sensitivity of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves [<!--@carterExperimentalWarmingTropical2021--> @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007 <!--@zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006-->], greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], or greater in the lower canopy [@griffinCanopyPositionAffects2002]. 
 This variation may be attributable to forest type, leaf traits and age [e.g., greater $Q_{10}$ in younger leaves, @zhouLeafageEffectsTemperature2015], or acclimation to high temperature that decreases $Q_{10}$ [@slotGeneralPatternsAcclimation2015; @carterExperimentalWarmingTropical2021]. 
 Overall, however, we currently lack mechanistic understanding of how and why the temperature sensitivity of respiration varies across the forest vertical profile. 
 
