--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -61,7 +61,7 @@ w_intro=369
 w_biophys=1515
 w_tleaf=749
 w_traits= 2391
-w_met=1000
+w_met=940
 w_ecol=1353
 w_vertgradients=w_biophys+w_tleaf+w_traits+w_met+w_ecol
 w_imp_gc=1088
@@ -380,8 +380,8 @@ Leaf phenology thereby both responds to and influences the vertical structure of
 
 ## 4. Leaf gas exchange and its thermal sensitivity
 
-Leaf metabolism is strongly shaped by $T_{leaf}$, and by the traits and environmental drivers reviewed above, all of which vary across vertical forest gradients (Fig. `r fig_schematic`). 
-However, as we detail below, few studies have evaluated temperature responses of leaf metabolic rates along a vertical forest gradient, or compared sun and shade leaves (Table `r table_leaf_metabolism`). 
+Leaf metabolism is strongly shaped by environmental drivers, $T_{leaf}$, and traits, all of which vary across vertical forest gradients (sections 1-3), Fig. `r fig_schematic`). 
+However, as we detail below, few studies have evaluated how temperature responses of leaf metabolic rates are shaped by the varying environmental conditions across vertical forest gradients (Table `r table_leaf_metabolism`). 
 
 \newpage
 
@@ -415,26 +415,26 @@ $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et
 
 Leaf hydraulic, stomatal and boundary layer conductances are all critical for regulating $T_{leaf}$ via latent heat loss (Fig. `r fig_leaf_T`). 
 Due to higher wind, lower RH, and smaller leaf sizes in the upper canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
-Maximum $g_s$ increases with light--typically tracking photosynthetic capacity [@wongStomatalConductanceCorrelates1979]--and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
-However, water supply cannot meet the demands caused by the high radiation and $g_b$ in sun leaves with fully open stomata, because of height-related constraints on water transport [e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010] and/or increased leaf-air VPD caused by leaf warming in sunlit canopy locations [@buckleyStomatalConductanceOptimized2014]. These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and $\delta^{13}C$ discussed in section 3.3 (Table 1).
-Stomatal depression reduces transpirational cooling (Fig. `r fig_leaf_T`), thus amplifying the warming of sun leaves by high radiation [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
+Maximum $g_s$ increases with light -- typically tracking photosynthetic capacity [@wongStomatalConductanceCorrelates1979] -- and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
+However, water supply cannot meet the demands caused by the high radiation and $g_b$ in sun leaves with fully open stomata, in part because of height-related constraints on water transport [e.g, @yoderEvidenceReducedPhotosynthetic1994; @kochLimitsTreeHeight2004; @sillettIncreasingWoodProduction2010] and/or increased leaf-air VPD caused by leaf warming in sunlit canopy locations [@buckleyStomatalConductanceOptimized2014]. These constraints tend to reduce leaf water potential, making midday stomatal depression more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO~2~ and $\delta^{13}C$ (section 3.3, Table `r table_leaf_traits`).
+Stomatal depression reduces transpirational cooling (Fig. `r fig_leaf_T`e), thus amplifying the warming of sun leaves by high radiation [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994; @kosugiSeasonalFluctuationsTemperature2006]. 
 The temperature at which $g_s$ is greatest, $T_{opt}$ of $g_s$, did not differ significantly between sun and shade leaves in three tropical tree species [@slotPhotosyntheticHeatTolerance2019], but sun leaves in the upper canopy show a stronger decrease in $g_s$ in response to rising $T_{air}$ (driven by increased VPD) than lower-canopy shade leaves [@hernandezSimilarTemperatureDependence2020; @carterExperimentalWarmingTropical2021]. 
 This, added to the tendency for sun leaves to have higher $T_{leaf}$, implies that high $T_{air}$ should decrease $g_s$ of upper canopy leaves more than understory leaves, particularly when water availability is limited.
 
 ### 4.2. Photosynthesis
 
-Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both predicted by optimization theory [@fieldAllocatingLeafNitrogen1983; @hiroseMaximizingDailyCanopy1987] and observed in numerous field studies [Table `r table_leaf_metabolism`, @niinemetsPhotosynthesisResourceDistribution2007; @kenzoHeightrelatedChangesLeaf2015 ; @slotPhotosyntheticHeatTolerance2019; @chenLeafEconomicsSpectrum2020].
+Photosynthetic capacity is generally higher in exposed canopy positions -- a fact that is both predicted by optimization theory [@fieldAllocatingLeafNitrogen1983; @hiroseMaximizingDailyCanopy1987] and observed in numerous field studies (Table `r table_leaf_metabolism`)<!-- @niinemetsPhotosynthesisResourceDistribution2007; @kenzoHeightrelatedChangesLeaf2015 ; @slotPhotosyntheticHeatTolerance2019; @chenLeafEconomicsSpectrum2020]-->.
 
 Temperature can affect photosynthesis directly, by altering photosynthetic enzyme activity and the electron transport chain,  and indirectly, by increasing VPD and closing stomata [@lloydEffectsRisingTemperatures2008]. 
-Photosynthesis has a peaked response to $T_{air}$, with the peak commonly corresponding to the prevalent ambient growing season temperature [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017; @doughtyAreTropicalForests2008]. 
+Photosynthesis has a peaked response to $T_{air}$, with the optimum commonly corresponding to the prevalent ambient growing season temperature [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017; @doughtyAreTropicalForests2008]. 
 Beyond the optimum, photosynthesis decreases due to stomatal closure [ @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020; @grossiordPlantResponsesRising2020 <!--@fredeenTemperatureHumidityEffects1999-->] and biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019; <!--@sageTemperatureResponseC32007;--> @varhammarPhotosyntheticTemperatureResponses2015; @sharkeyEffectsModerateHeat2005].
 
 We have very little evidence about how the temperature sensitivity of photosynthesis compares between sun and shade leaves, and existing studies, which  compare sun and shade leaves of the same trees, reveal no pronounced overall trend with height in photosynthetic temperature optima  (Table `r table_leaf_metabolism`).
 Based on consistent positive relationships between growth temperature and optimum temperature of photosynthesis ($T_{opt}$) across sites and seasons [e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019], one might expect sun leaves to have a stronger temperature-dependence and higher $T_{opt}$ than shade leaves [@campbell_introduction_1998; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
 However, such a trend is not apparent among recent studies, where for three species in Panama, $T_{opt}$ for sun leaves tended to be moderately, but not significantly, higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019; @hernandezSimilarTemperatureDependence2020]. 
 Similarly, $T_{opt}$ of RuBP carboxylation  ($V_{cmax}$) and regeneration rates ($J_{max}$) did not differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], nor within-canopies of tropical and temperate trees [@mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021;@mauTemperateTropicalForest2018]. 
-In contrast, tropical experimental warming observations showed that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from the understory to the top of the canopy, potentially linked to greater thermal sensitivity of $g_s$ in upper canopy leaves [@carterExperimentalWarmingTropical2021]. 
-@hernandezSimilarTemperatureDependence2020 speculated that the observed lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. 
+In contrast, tropical experimental warming observations showed that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from the understory to the top of the canopy, potentially linked to greater thermal sensitivity of $g_s$ in upper canopy leaves [@carterExperimentalWarmingTropical2021].
+The observed lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis [@hernandezSimilarTemperatureDependence2020]. 
 Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of midday stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. 
 Shade leaves that do not experience midday depression continue to fix carbon even when afternoon air temperatures peak [@millerOnlySunlitLeaves2021]. 
 Evaluating this would require diurnal monitoring of net photosynthesis across a forest vertical profile.
@@ -442,8 +442,8 @@ In the meantime, it remains unresolved whether photosynthesis is more affected b
 
 ### 4.3. Respiration
 
-Similar to photosynthesis, respiration tends to be higher in upper-canopy sun leaves [Table `r table_leaf_metabolism`, @chenLeafEconomicsSpectrum2020], but its temperature sensitivity ($Q_{10}$ or $E_0$, Table `r table_leaf_metabolism`) shows no definite trend along the vertical gradient [@bolstad_foliar_1999; @weerasingheCanopyPositionAffects2014].
-Specifically, the temperature sensitivity of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves [<!--@carterExperimentalWarmingTropical2021--> @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007 <!--@zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006-->], greater in upper-canopy leaves [@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996], or greater in the lower canopy [@griffinCanopyPositionAffects2002]. 
+Similar to photosynthesis, respiration tends to be higher in upper-canopy sun leaves, but its temperature sensitivity ($Q_{10}$ or $E_0$) shows no definite trend along the vertical gradient.
+Specifically, the temperature sensitivity of respiration can be constant within vertical profiles and in seedling sun vs. shade leaves<!--[<!--@carterExperimentalWarmingTropical2021-> @weerasingheCanopyPositionAffects2014; @bolstad_foliar_1999; @zaragoza-castellsDoesGrowthIrradiance2007 <!--@zaragoza-castellsClimatedependentVariationsLeaf2008; @xuSeasonalVariationTemperature2006->]-->, greater in upper-canopy leaves<!--[@turnbullScalingFoliarRespiration2003; @harleyEffectsLightTemperature1996]-->, or greater in the lower canopy <!--[@griffinCanopyPositionAffects2002]--> (Table `r table_leaf_metabolism`). 
 This variation may be attributable to forest type, leaf traits and age [e.g., greater $Q_{10}$ in younger leaves, @zhouLeafageEffectsTemperature2015], or acclimation to high temperature that decreases $Q_{10}$ [@slotGeneralPatternsAcclimation2015; @carterExperimentalWarmingTropical2021]. 
 Overall, however, we currently lack mechanistic understanding of how and why the temperature sensitivity of respiration varies across the forest vertical profile. 
 
@@ -570,7 +570,7 @@ Owing to differences in the representation of forest vertical strata, DVGMs vary
 In general, however, this variation is accounted for via light competition. 
 Models partition radiation above and within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018]. 
 Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the Community Land Model, CLM model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. 
-Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing cumulative LAI or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
+Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing cumulative LAI or lower light conditions [Table `r table_leaf_metabolism`, e.g., @krinnerDynamicGlobalVegetation2005]. 
 Recent years have seen growing efforts to incorporate vertical variation more directly in models, specifically involving leaf water potential and light absorption, along with a increasing interest in confronting models directly with field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
 Model developments by @chenColumnCanopyAirTurbulent2019, @bonanModelingCanopyinducedTurbulence2018, and @longoBiophysicsEcologyBiogeochemistry2019 implement vertical gradients of irradiance, water content, $T_{leaf},$ and humidification of canopy air by transpiration, modulated by turbulence within the forest and a roughness layer that extends to roughly twice the canopy height [@fisherPerspectivesFutureLand2020]. 
 
@@ -582,7 +582,7 @@ Most models have been developed to capture dynamics in the upper canopy, given t
 Less attention has focused on developing and validating understory tree dynamics and responses to perturbations in models, in large part to the paucity of observational and experimental studies needed to resolve key patterns and underlying mechanisms (sections 4, 5).
 Pairing of models with observational studies is key to further improving our mechanistic understanding of vertical gradients and their implications.
 
-Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, Table 1, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, Table 2). 
+Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, Table `r table_leaf_traits`, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, Table `r table_leaf_metabolism`). 
 Multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @bonanMovingIncorrectUseful2021].
 In addition, capturing vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects, requires improved characterization of the functional response of leaf-level processes to vertically varying abiotic conditions, and the role of traits in mediating responses to thermal sensitivity. 
 
@@ -595,7 +595,7 @@ Airborne, spaceborne and terrestrial laser scanning data yield detailed 3D recon
 These data can be combined with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based infrared cameras. 
 
 
-![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
+![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table `r table_leaf_traits` or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
 
 Detailed structural information from lidar data can be used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
 Canopy shading can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
